-
Bug
-
Resolution: Done
-
P0: Blocker
-
5.3.0 RC1
-
None
-
b6de758ec68a4df87b37d641357770d186022cdf
The backingstore in eglfs uses GL_REPEAT. This cannot work for non-power-of-two sizes on systems where the OpenGL implementation does not support NPOT textures (and GL_REPEAT on them)
This results in not rendering widget windows on such embedded systems at all.
This can be fixed easily in eglfs since the use of GL_REPEAT originates from some old restrictions in QOpenGLTextureBlitter which have been since lifted.
For Gerrit Dashboard: QTBUG-38866 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
84970,1 | Avoid using repeat on widget textures in eglfs | release | qt/qtbase | Status: MERGED | +2 | 0 |