Avoid using repeat on widget textures in eglfs

Otherwise widgets will not be shown on some embedded systems.

Task-number: QTBUG-38866
Change-Id: Id16408dc7eb657c052bbe3bdb86e35ab2f062632
Reviewed-by: Jørgen Lind <jorgen.lind@digia.com>

cregit: b6de758ec68a4df87b37d641357770d186022cdf https://github.com/qt/qtbase/commit/b6de758ec68a4df87b37d641357770d186022cdf